<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".P3kActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/guideline_appbar"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/p3k_dan_evakuasi"
        android:textColor="@color/kemilau_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_appbar"
        app:layout_constraintLeft_toRightOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/keterangan_poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/poster"
        android:textColor="#111111"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/guideline_appbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_p3k_poster_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/keterangan_poster">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo_rumah_sakit"
                android:src="@drawable/poster_p3k_1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="5"
                android:text="@string/pertolongan_pertama_pada_saat_bencana"
                android:textColor="#111111" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="6dp"
                android:layout_weight="0.5"
                android:contentDescription="@string/logo_rumah_sakit"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_p3k_poster_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/card_p3k_poster_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo_rumah_sakit"
                android:src="@drawable/poster_p3k_2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="5"
                android:text="@string/panduan_evakuasi_pasca_tsunami_di_masa_pandemi"
                android:textColor="#111111" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="6dp"
                android:layout_weight="0.5"
                android:contentDescription="@string/logo_rumah_sakit"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/keterangan_artikel_SHE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/artikel_hse_health_safety_environment"
        android:textColor="#111111"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/card_p3k_poster_2" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/keterangan_artikel_SHE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/artikel_p3k_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_1_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_2_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_3_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_4_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_5_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_6_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_7_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_8_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:id="@+id/artikel_p3k_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/artikel_hse_9_name"
                    android:textColor="#111111" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.35"
                    android:contentDescription="@string/logo_rumah_sakit"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>